clusters/my-cluster/cloudflared/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: echo.kosumi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-hello
                port:
                  number: 80
