clusters/my-cluster/cloudflared/status-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rust-hello-status
  namespace: default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: status.kosumi.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rust-hello
                port:
                  number: 3000
